<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:id="@+id/magnitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/magnitude_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="100sp"
            android:gravity="center"
            android:text="@string/placeholder_double"
            android:textColor="@color/colorAccent"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/rScale"
            android:layout_weight="1"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@id/magnitude"
        android:layout_height="wrap_content">
        <ImageView
            android:contentDescription="@string/description_gps"
            android:padding="25dp"
            android:id="@+id/location_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_crosshairs_gps_black_48dp" />
        <ImageView
            android:contentDescription="@string/description_clock"
            android:padding="25dp"
            android:layout_below="@id/location_info"
            android:id="@+id/earthquake_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clock_black_48dp" />
        <ImageView
            android:contentDescription="@string/description_info"
            android:padding="25dp"
            android:layout_below="@id/location_icon"
            android:id="@+id/location_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_information_outline_black_48dp" />
        <LinearLayout
            android:padding="25dp"
            android:id="@+id/latlon"
            android:layout_toEndOf="@id/location_icon"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lon"/>
                <TextView
                    android:id="@+id/longitude_number"
                    android:textSize="20sp"
                    android:text="@string/placeholder_double"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lat"/>
                <TextView
                    android:id="@+id/latitude_number"
                    android:textSize="20sp"
                    android:text="@string/placeholder_double"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
        <View
            android:padding="50dp"
            android:layout_toEndOf="@id/location_icon"
            android:layout_below="@id/latlon"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <LinearLayout
            android:padding="25dp"
            android:layout_toEndOf="@id/location_info"
            android:layout_below="@id/latlon"
            android:id="@+id/location_information"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:paddingTop="3dp"
                    android:id="@+id/place"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lon"/>
        </LinearLayout>
        <View
            android:padding="50dp"
            android:layout_toEndOf="@id/location_info"
            android:layout_below="@id/location_information"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <LinearLayout
            android:padding="25dp"
            android:id="@+id/date_info"
            android:layout_below="@id/location_information"
            android:layout_toEndOf="@id/earthquake_date"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:paddingTop="20dp"
                    android:id="@+id/date_string"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="20sp" />
        </LinearLayout>
        <View
            android:padding="50dp"
            android:layout_toEndOf="@id/earthquake_date"
            android:layout_below="@id/date_info"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>
    </RelativeLayout>


</RelativeLayout>